email template edit and uploads dir changed to static